--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "angular-cookies": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "ng-table": "^0.8.3",
+    "cryptojslib": "^3.1.2"
   }
 }
